--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ commands:
             echo "=== Check workspace root ==="
             pwd
             echo "NX_WORKSPACE_ROOT is ${NX_WORKSPACE_ROOT:-not set}"
+          name: Debug
       - save_cache:
           key: nx-apps-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
           name: Save Nx Apps Cache
@@ -53,9 +54,8 @@ commands:
             - .nx/cache
       - persist_to_workspace:
           paths:
-            - project/dist/apps/web
-            - project/dist/apps/api
-          root: ~/
+            - dist/apps/web
+            - dist/apps/api
   build-nx-libs:
     description: Build Nx Libs
     steps:
