--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ commands:
           paths:
             - dist/apps/web
             - dist/apps/api
+          root: .
   build-nx-libs:
     description: Build Nx Libs
     steps:
