--- a/.circleci/config/commands/build-nx-apps.yml
+++ b/.circleci/config/commands/build-nx-apps.yml
@@ -56,6 +56,7 @@ steps:
       paths:
         - .nx/cache
   - persist_to_workspace:
+      root: .
       paths:
         - dist/apps/web
         - dist/apps/api
