docs: document that --nx-bail prevents proper cache storage
- Add comment warning not to use --nx-bail flag
- Flag was causing Nx Cloud to fail storing cache artifacts
- Removing the flag fixed the ENOENT cache errors

--- a/.circleci/config/commands/build-nx-apps.yml
+++ b/.circleci/config/commands/build-nx-apps.yml
@@ -1,5 +1,6 @@
 # Can't use `pnpm cli` doesn't exist yet
 # We split `apps` and `libs` along with their cache location
+# IMPORTANT: Do not use --nx-bail flag as it prevents Nx Cloud from properly storing cache artifacts
 
 description: 'Build Nx Apps'
 steps:
