fix: use human-readable file sizes in cache listing
- Change ls flags from -la to -lah for human-readable sizes
- Makes it easier to see file sizes like 1.5M instead of 1533321

--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -10,10 +10,7 @@
     "build": {
       "defaultConfiguration": "dev",
       "executor": "@nx/next:build",
-      "outputs": [
-        "{options.outputPath}",
-        "!{options.outputPath}/.next/cache"
-      ],
+      "outputs": ["{options.outputPath}", "!{options.outputPath}/.next/cache"],
       "options": {
         "outputPath": "dist/apps/web",
         "postcssConfig": "apps/web/postcss.config.js"
