debug: add verbose logging for Nx Cloud operations
- Add NX_VERBOSE_LOGGING=true environment variable
- Add --verbose flag to nx run-many command
- This will show detailed Nx Cloud upload/download operations
- Helps diagnose why artifacts fail to store to remote cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ commands:
             ls -lah dist/apps/web/.next/cache/ 2>/dev/null | head -10 || echo "No Next.js cache"
           name: Check cache after restore
       - run:
-          command: pnpm nx run-many --target=build --projects=web,api -c ci
+          command: NX_VERBOSE_LOGGING=true pnpm nx run-many --target=build --projects=web,api -c ci --verbose
           name: Build Nx Apps (web, api)
       - run:
           command: |
