--- a/.circleci/config/commands/build-nx-libs.yml
+++ b/.circleci/config/commands/build-nx-libs.yml
@@ -4,6 +4,18 @@ description: 'Build Nx Libs'
 steps:
   - nx/set-shas:
       main-branch-name: 'master'
-  # No local cache needed - libs build fast enough with just Nx Cloud
+  # Restore Nx libs cache
+  - restore_cache:
+      name: 'Restore Nx Libs Cache'
+      keys:
+        - nx-libs-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+        - nx-libs-cache-{{ .Environment.CIRCLE_BRANCH }}-
+        - nx-libs-cache-
   - run:
-      command: pnpm nx run-many --target=build --all --exclude=web,api -c ci
+      command: NX_CACHE_DIRECTORY=.nx/cache-libs pnpm nx run-many --target=build --all --exclude=web,api -c ci
+  # Save Nx libs cache
+  - save_cache:
+      name: 'Save Nx Libs Cache'
+      key: nx-libs-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+      paths:
+        - .nx/cache-libs
