--- a/.circleci/config/jobs/build-nx-apps.yml
+++ b/.circleci/config/jobs/build-nx-apps.yml
@@ -11,6 +11,8 @@ resource_class: << parameters.resource_class >>
 
 environment:
   NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
+  NX_CACHE_DIRECTORY: .nx/cache-apps
+  NX_VERBOSE_LOGGING: true
 
 steps:
   - restore-workspace
