--- a/.circleci/config/commands/build-nx-libs.yml
+++ b/.circleci/config/commands/build-nx-libs.yml
@@ -4,19 +4,10 @@ description: 'Build Nx Libs'
 steps:
   - nx/set-shas:
       main-branch-name: 'master'
-  # Restore Nx libs cache
-  - restore_cache:
-      name: 'Restore Nx Libs Cache'
-      keys:
-        - nx-libs-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
-        - nx-libs-cache-{{ .Environment.CIRCLE_BRANCH }}-
-        - nx-libs-cache-
+  - restore-nx-cache:
+      cache_name: libs
   - run:
       name: 'Build Nx Libs'
       command: pnpm nx run-many --target=build --all --exclude=web,api -c ci
-  # Save Nx libs cache
-  - save_cache:
-      name: 'Save Nx Libs Cache'
-      key: nx-libs-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
-      paths:
-        - .nx/cache-libs # Must match NX_CACHE_DIRECTORY in command environment
+  - save-nx-cache:
+      cache_name: libs
