--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -10,6 +10,7 @@ resource_class: << parameters.resource_class >>
 
 environment:
   NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
+  NX_CACHE_DIRECTORY: .nx/cache-e2e
 
 parallelism: 4
 steps:
@@ -18,6 +19,8 @@ steps:
   - setup_remote_docker:
       version: default
   - restore-workspace-database
+  - restore-nx-cache:
+      cache_name: e2e
   - run:
       name: 'Check workspace after restore'
       command: |
@@ -71,6 +74,8 @@ steps:
         pnpm nx e2e web-e2e -c ci \
           --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
 
+  - save-nx-cache:
+      cache_name: e2e
   # https://stackoverflow.com/questions/68916222/docker-build-error-cannot-connect-to-the-docker-daemon-at-unix-var-run-docke/68922177#68922177
 
   # This needs a separate job
