fix: improve nx cache configuration
- Add absolute path prefix to save-nx-cache.yml
- Add cache version prefix to cache keys
- Remove default empty string for extra_paths parameter
- Fix conditional logic for when/unless blocks

--- a/.circleci/config/commands/save-nx-cache.yml
+++ b/.circleci/config/commands/save-nx-cache.yml
@@ -5,7 +5,6 @@ parameters:
     description: 'The name of the cache (e.g., lint, unit, integration, e2e, apps, libs)'
   extra_paths:
     type: string
-    default: ''
     description: 'Additional paths to cache (optional)'
 steps:
   - when:
@@ -13,7 +12,7 @@ steps:
       steps:
         - save_cache:
             name: 'Save Nx << parameters.cache_name >> Cache'
-            key: nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+            key: v{{ .Environment.CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
             paths:
               - .nx/cache-<< parameters.cache_name >>
               - << parameters.extra_paths >>
@@ -22,6 +21,6 @@ steps:
       steps:
         - save_cache:
             name: 'Save Nx << parameters.cache_name >> Cache'
-            key: nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+            key: v{{ .Environment.CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
             paths:
               - .nx/cache-<< parameters.cache_name >>
