--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,9 +209,9 @@ commands:
     steps:
       - restore_cache:
           keys:
-            - nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
-            - nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-
-            - nx-<< parameters.cache_name >>-cache-
+            - v{{ .Environment.CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+            - v{{ .Environment.CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-
+            - v{{ .Environment.CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-
           name: Restore Nx << parameters.cache_name >> Cache
   restore-workspace:
     description: Restore Workspace
@@ -268,7 +268,6 @@ commands:
         description: The name of the cache (e.g., lint, unit, integration, e2e, apps, libs)
         type: string
       extra_paths:
-        default: ''
         description: Additional paths to cache (optional)
         type: string
     steps:
@@ -276,7 +275,7 @@ commands:
           condition: << parameters.extra_paths >>
           steps:
             - save_cache:
-                key: nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+                key: v{{ .Environment.CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
                 name: Save Nx << parameters.cache_name >> Cache
                 paths:
                   - .nx/cache-<< parameters.cache_name >>
@@ -285,7 +284,7 @@ commands:
           condition: << parameters.extra_paths >>
           steps:
             - save_cache:
-                key: nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+                key: v{{ .Environment.CACHE_VERSION }}-nx-<< parameters.cache_name >>-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
                 name: Save Nx << parameters.cache_name >> Cache
                 paths:
                   - .nx/cache-<< parameters.cache_name >>
