--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -269,6 +269,7 @@ commands:
         type: string
       extra_paths:
         description: Additional paths to cache (optional)
+        required: false
         type: string
     steps:
       - when:
@@ -312,6 +313,7 @@ commands:
           name: Apply Neo4j Constraints
           working_directory: .docker/cypher/scripts
 environment:
+  CACHE_VERSION: 0.1
   NX_DAEMON: false
 executors:
   docker-node-arm64:
