--- a/.circleci/config/commands/save-nx-cache.yml
+++ b/.circleci/config/commands/save-nx-cache.yml
@@ -5,6 +5,7 @@ parameters:
     description: 'The name of the cache (e.g., lint, unit, integration, e2e, apps, libs)'
   extra_paths:
     type: string
+    required: false
     description: 'Additional paths to cache (optional)'
 steps:
   - when:
