--- a/.circleci/config/config.yml
+++ b/.circleci/config/config.yml
@@ -28,3 +28,4 @@ environment:
   # The daemon is a global process that can cause race conditions and cache
   # confusion when multiple jobs try to use it simultaneously
   NX_DAEMON: false
+  CACHE_VERSION: 0.1
